--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Knight Developers</title>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="description" content="Knight Developers is a startup providing UI/UX Designing, Web Designing and Web Development services. Contact us and together we can bring your ideas to life."/>
-        <meta property="og:title" content="Knight Developers" />
+        <meta name="keywords" content="knight developers| knights| ui| ux| ui/ux| designing| ui designing| web designing| web development| website| web developers| web developers in kozhikode">
+        <meta property="og:title" content="Knight Developers"/>
         <meta property="og:description" content="Knight Developers is a startup providing UI/UX Designing, Web Designing and Web Development services. Contact us and together we can bring your ideas to life."/>
-        <meta property="og:image" content="assets/images/knight_developers_logo.svg"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:image" content="https://knight-developers.github.io/assets/images/knight_developers_logo.svg"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="canonical" href="https://knight-developers.github.io/"/>
-        <link rel="shortcut icon" href="assets/images/knight_developers_logo.svg" type="image/x-icon">
-        <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="assets/images/knight_developers_logo.svg" type="image/x-icon"/>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <nav></nav>
-        <header></header>
-        <main></main>
-        <footer></footer>
-        <img src="assets/images/knight_developers_sword.svg" alt="Knight Developers Sword">
+        <nav>
+            <img src="assets/images/knight_developers_logo.svg" alt="Knight Developers">
+            <div>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
+                </ul>
+                <button id="menu">
+                    <hr/>
+                </button>
+            </div>
+        </nav>
+        <header id="home"></header>
+        <main id="services"></main>
+        <footer id="contact"></footer>
+        <img src="assets/images/knight_developers_sword.svg" alt="Knight Developers Sword"/>
     </body>
     <script src="script.js"></script>
 </html>
