Added header section and other minor refactoring

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <meta property="og:title" content="Knight Developers"/>
         <meta property="og:description" content="Knight Developers is a startup providing UI/UX Designing, Web Designing and Web Development services. Contact us and together we can bring your ideas to life."/>
         <meta property="og:image" content="https://knight-developers.github.io/assets/images/knight_developers_logo.svg"/>
+        <meta property="og:image:secure_url" content="https://secure.example.com/ogp.jpg"/>
+        <meta property="og:image:type" content="image/svg"/>
+        <meta property="og:image:width" content="480"/> 
+        <meta property="og:image:height" content="480"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="canonical" href="https://knight-developers.github.io/"/>
         <link rel="shortcut icon" href="assets/images/knight_developers_logo.svg" type="image/x-icon"/>
@@ -19,7 +23,7 @@
             <img src="assets/images/knight_developers_logo.svg" alt="Knight Developers">
             <div>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact Us</a></li>
                 </ul>
@@ -28,7 +32,27 @@
                 </button>
             </div>
         </nav>
-        <header id="home"></header>
+        <header id="home">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <div>
+                <div>
+                    <h1>Knight Developers</h1>
+                    <br>
+                    <span>Bring your ideas to life with us</span>
+                </div>
+                <button>
+                    <a href="#services">Know More</a>
+                </button>
+            </div>
+        </header>
         <main id="services"></main>
         <footer id="contact"></footer>
         <img src="assets/images/knight_developers_sword.svg" alt="Knight Developers Sword"/>
