Added loading screen, style for services section and fetched services

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <img src="assets/images/knight_developers_logo.svg" alt="Knight Developers">
             <div>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#" class="font-aquire">Home</a></li>
+                    <li><a href="#services" class="font-aquire">Services</a></li>
+                    <li><a href="#contact" class="font-aquire">Contact Us</a></li>
                 </ul>
                 <button id="menu">
                     <hr/>
@@ -44,7 +44,7 @@
             </ul>
             <div>
                 <div>
-                    <h1>Knight Developers</h1>
+                    <h1 class="font-aquire">Knight Developers</h1>
                     <br>
                     <span>Bring your ideas to life with us</span>
                 </div>
@@ -53,9 +53,69 @@
                 </button>
             </div>
         </header>
-        <main id="services"></main>
+        <main>
+            <section id="services">
+                <h2 class="font-aquire">Services We Offer</h2>
+                <div>
+                    <article>
+                        <div>
+                            <h3>UI Designing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
+                        </div>
+                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
+                    </article>
+                    <article>
+                        <div>
+                            <h3>UI Designing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
+                        </div>
+                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
+                    </article>
+                    <article>
+                        <div>
+                            <h3>UI Designing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
+                        </div>
+                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
+                    </article>
+                    <article>
+                        <div>
+                            <h3>UI Designing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
+                        </div>
+                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
+                    </article>
+                    <article>
+                        <div>
+                            <h3>UI Designing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
+                        </div>
+                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
+                    </article>
+                    <article>
+                        <div>
+                            <h3>UI Designing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
+                        </div>
+                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
+                    </article>
+                </div>
+            </section>
+        </main>
         <footer id="contact"></footer>
         <img src="assets/images/knight_developers_sword.svg" alt="Knight Developers Sword"/>
+        <div>
+            <svg width="432" height="2089" viewBox="0 0 432 2089" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M216.448 2088.75L140.092 1871.67H291.542L216.448 2088.75Z" fill="#0080FF"/>
+                <path d="M170.382 483.378H261.252L291.542 1871.67H140.092L170.382 483.378Z" fill="#0080FF"/>
+                <path d="M8.36569e-05 541.657C24.7119 546.014 56.5194 482.77 71.0439 400.397L26.2991 392.508L8.36569e-05 541.657Z" fill="#0080FF"/>
+                <path d="M432 541.658C407.288 546.015 375.481 482.771 360.956 400.398L405.701 392.508L432 541.658Z" fill="#0080FF"/>
+                <rect x="26.5059" y="392.509" width="378.625" height="60.5801" fill="#0080FF"/>
+                <rect x="177.957" y="89.6079" width="75.7251" height="302.9" fill="#0080FF"/>
+                <rect x="151.451" y="64.2549" width="90.8701" height="90.8701" rx="12" transform="rotate(-45 151.451 64.2549)" fill="#0080FF"/>
+            </svg>                                
+            <span class="font-aquire">Loading</span>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
