--- a/index.html
+++ b/index.html
@@ -53,57 +53,14 @@
                 </button>
             </div>
         </header>
+        <img src="assets/images/knight_developers_sword.svg" alt="Knight Developers Sword"/>
         <main>
             <section id="services">
                 <h2 class="font-aquire">Services We Offer</h2>
-                <div>
-                    <article>
-                        <div>
-                            <h3>UI Designing</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
-                        </div>
-                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
-                    </article>
-                    <article>
-                        <div>
-                            <h3>UI Designing</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
-                        </div>
-                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
-                    </article>
-                    <article>
-                        <div>
-                            <h3>UI Designing</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
-                        </div>
-                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
-                    </article>
-                    <article>
-                        <div>
-                            <h3>UI Designing</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
-                        </div>
-                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
-                    </article>
-                    <article>
-                        <div>
-                            <h3>UI Designing</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
-                        </div>
-                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
-                    </article>
-                    <article>
-                        <div>
-                            <h3>UI Designing</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam itaque minima nisi neque eveniet nobis amet cumque nam official</p>
-                        </div>
-                        <img src="assets/images/illustrations/ui_designing.svg" alt="">
-                    </article>
-                </div>
+                <div></div>
             </section>
         </main>
         <footer id="contact"></footer>
-        <img src="assets/images/knight_developers_sword.svg" alt="Knight Developers Sword"/>
         <div>
             <svg width="432" height="2089" viewBox="0 0 432 2089" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M216.448 2088.75L140.092 1871.67H291.542L216.448 2088.75Z" fill="#0080FF"/>
