Added footer section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="canonical" href="https://knight-developers.github.io/"/>
         <link rel="shortcut icon" href="assets/images/knight_developers_logo.svg" type="image/x-icon"/>
         <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <nav>
@@ -45,7 +46,7 @@
             <div>
                 <div>
                     <h1 class="font-aquire">Knight Developers</h1>
-                    <br>
+                    <br/>
                     <span>Bring your ideas to life with us</span>
                 </div>
                 <button>
@@ -60,7 +61,17 @@
                 <div></div>
             </section>
         </main>
-        <footer id="contact"></footer>
+        <footer id="contact">
+            <img src="assets/images/knight_developers_logo.svg" alt="Knight Developers"/>
+            <section>
+                <section>
+                    <h1 class="font-aquire">Knight Developers</h1>
+                    <br/>
+                    <span>Bring your ideas to life with us</span>
+                </section>
+                <ul></ul>
+            </section>
+        </footer>
         <div>
             <svg width="432" height="2089" viewBox="0 0 432 2089" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M216.448 2088.75L140.092 1871.67H291.542L216.448 2088.75Z" fill="#0080FF"/>
